<resources>
    <string name="app_name">YukDaily</string>
    <string name="splash_backdrop">splash_backdrop</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_news">你似乎来到了没有知识的荒野</string>
    <string name="zhihudaily_slogan">每天三次,每次七分钟</string>
    <string name="gank_slogan">干货集中营</string>
    <string name="action_comment">评论</string>
    <string name="action_like">收藏</string>
    <string name="action_thumbup">感谢</string>
    <string name="action_share">分享</string>
    <string name="news_section">专栏</string>
    <string name="zhuanlanFormat">专栏:%s</string>
    <string name="transition_photo">transition_photo</string>
    <string name="format_comment">评论: %d</string>
    <string name="format_thumbup">赞同: %d</string>
    <string name="trimCollapsedText">展开</string>
    <string name="trimExpandedText">折叠</string>
    <string name="no_comment">评论区的水太深了</string>
    <string name="no_ganks">干货呢?</string>
    <string name="item_anzhuo">Android</string>
    <string name="item_ios">iOS</string>
    <string name="item_plus">拓展资源</string>
    <string name="item_frontend">前端</string>
    <string name="item_fuli">福利</string>
    <string name="search_hint_gank">搜索你感兴趣的干货…</string>
    <string name="search_hint_zhihu">搜索你感兴趣的新闻…</string>
    <string name="open_link_failed">打开链接失败</string>
    <string name="photo_operation">图片操作</string>
    <string name="action_save">保存</string>
    <string name="action_report">举报</string>
    <string name="action_qrcode">识别图中的二维码</string>
    <string name="action_repost">转发</string>
    <string name="item_news_index">首页</string>
    <string name="item_news_title">读读日报</string>
    <string name="theme_editors">主编:</string>
    <string name="network_error">服务器大姨妈了</string>
    <string name="action_share_failed">找不到相应的app</string>
    <string name="hint_share_news">将它分享到</string>
    <string name="format_share_news">我在知乎日报上看到了:%1$s (链接: %2$s</string>
    <string name="hint_thumbup">谢谢支持</string>
</resources>
